# Mini_os_simulation

./: CMakeLists.txt  MiniOS_Development_Guide.md  README.md
config/: kernel.conf
include/: filesystem.h  kernel_config.h  logger.h  memory_manager.h  process_manager.h  scheduler.h  shell.h  system_monitor.h
src/: filesystem.cpp  kernel_config.cpp  logger.cpp  main.cpp  memory_manager.cpp  process_manager.cpp  scheduler.cpp  shell.cpp  system_monitor.cpp
